# PogPaint

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  index.html  keys.toml  pog-paint-bin.js  pog-paint-bin.wasm  pog-paint.js  pog-paint.wasm
.github/workflows/: ci.yml
data/: config.toml  keys.toml
data/shaders/: circle.glsl  color_2d.glsl  color_3d.glsl  hue.glsl  outline.glsl  ring.glsl  saturation_value.glsl  saturation_wheel.glsl  texture.glsl
lib/: Cargo.toml
lib/src/: file_format.rs  heightmap.rs  lib.rs  plane.rs  texture.rs
models/: chiken-poop.pp
shaders/: circle.glsl  color_wheel.glsl  hue_wheel.glsl  lightness_wheel.glsl  outline.glsl  texture.glsl
src/: brush.rs  camera.rs  color.rs  config.rs  ctx.rs  gizmo.rs  keybind.rs  keys.rs  main.rs  model.rs  palette.rs  plane.rs  save.rs  texture.rs  tool.rs  transform.rs  wheel.rs
src/tools/: brush.rs  color_picker.rs  create.rs  heightmap.rs  mod.rs  pick.rs  transform.rs
