[workspace]

[workspace.dependencies]
flate2 = "1.0.27"
geng.git = "https://github.com/geng-engine/geng"
# geng.path = "../geng/crates/geng"
serde = "1"
pog-paint.path = "lib"
array2d = { version = "0.3", features = ["serde"] }

[package]
name = "pog-paint-bin"
version = "0.1.0"
edition = "2021"

[package.metadata.geng]
assets = ["data"]

[dependencies]
geng.workspace = true
pog-paint.workspace = true
serde.workspace = true
array2d.workspace = true
